--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ N=<input type='text' size='35' name='n' value=' 'class="calc-display"><br>
  	<div class="socialdiv">
  		<div class="fb"><a href="https://www.facebook.com/dmytro.viakh" target="_blank"><i class="icon-facebook"></i></a></div>
 		<div class="gplus"><a href="https://plus.google.com/u/0/+PetrKruk/posts" target="_blank"><i class="icon-gplus"></i></a></div>
-		<div class="git"><a href="https://github.com/Dvyakhk" target="_blank"><i class="icon-github"></i></a></div>
+		<div class="git"><a href="https://github.com/Dvyakhk/Kompleksnye" target="_blank"><i class="icon-github"></i></a></div>
 		<div class="link"><a href="https://ua.linkedin.com/pub/dmytri-viakhk/73/358/627" target="_blank"><i class="icon-linkedin"></i></a></div>
  	</div>
  </div>   
